--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,10 @@ code {
 
 @media screen and (max-width: 600px) {
   body {
-    font-size: 12px;
+    font-size: 14px;
+  }
+
+  input {
+    font-size: 16px;
   }
 }
