--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,13 @@ code {
     font-size: 16px;
   }
 }
+
+@media screen and (max-width: 600px) {
+  body {
+    font-size: 12px;
+  }
+
+  input {
+    font-size: 12px;
+  }
+}
